销售单行实现"复制一个产品"这个button的功能，仅能用在 已保存过销售单的表单下，新建(未保存)的销售单在服务端无法查询到数据

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,5 @@
 *.egg-info
 dist
 build
-muk_utils
-muk_web_theme
-muk_web_utils
-odoo-debrand-11
-aop_purchase
-odoo_product_pack_bundle
-app_odoo_customize
-trans_client12
 rowno_in_tree
+document_sidebar
